# pulse-cpp

src/: CMakeLists.txt  build_NDK_cmake.sh  build_x86_cmake.sh
src/ext/: opencv.cpp  opencv.hpp
